statum-macros/tests/ui/invalid_state_empty_enum.stderr
error: #[state] enums must have at least one variant.
 --> tests/ui/invalid_state_empty_enum.rs:6:1
  |
6 | #[state]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `state` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_state_empty_enum.rs:7:19
  |
7 | enum EmptyState {}
  |                   ^ consider adding a `main` function to `$DIR/tests/ui/invalid_state_empty_enum.rs`
